--- a/docs.html
+++ b/docs.html
@@ -50,11 +50,11 @@
 			</ul>
 		</nav>
 	</header>
-	<div class="row">
+	<div class="row df">
 		<div class="box"><a href="https://drive.google.com/file/d/1rsErHADi4OXcFA_SYzVREwWxtwyl0E34/view?usp=sharing"><img src="img/sv1.jpg" alt=""></a></div>
 		<div class="box"><a href="https://drive.google.com/file/d/1w_5-AgJ-txGtoCqcqzPyDMXomoYtizpd/view?usp=sharing"><img src="img/sv2.jpg" alt=""></a></div>
 		<div class="box"><a href="https://drive.google.com/file/d/1erjPMkq5ljVLZ5vwxGjQ7V4KVg28DLUo/view?usp=sharing"><img src="img/st.jpg" alt=""></a></div>
-		<a href="https://drive.google.com/file/d/1njWeCB-zYg6Alwg-Bmua7Rk64GkrS1Jo/view?usp=sharing"><div class="box"><img src="img/rozp.jpg" alt=""></a></div>
+		<div class="box"><a href="https://drive.google.com/file/d/1njWeCB-zYg6Alwg-Bmua7Rk64GkrS1Jo/view?usp=sharing"><img src="img/rozp.jpg" alt=""></a></div>
 	</div>
 	<footer>
 		<div class="inner-foot">
