--- a/schedule.html
+++ b/schedule.html
@@ -39,47 +39,40 @@
 		<nav>
 			<ul>
 				<li><img src="img/llglll2_50_1_20.png" alt="logo" class="logo show hiden"></li>
-				<li class="hover"><a href="index.html">Головна</a></li>
-				<li class="hover hide"><a href="сonditions.html">Умови вступу</a></li>
-				<li class="hover hide"><a href="docs.html">Установчі документи</a></li>
-				<li class="hover hide"><a href="">Розклад уроків</a></li>
-				<li class="hover hide"><a href="">Фотогалерея</a></li>
-				<li class="hover hide"><a href="contact.html">Контакти</a></li>
+				<a href="index.html"><li class="hover">Головна</li></a>
+				<a href="сonditions.html" class="hide"><li class="hover hide">Умови вступу</li></a>
+				<a href="docs.html" class="hide"><li class="hover hide">Установчі документи</li></a>
+				<a href="schedule.html" class="hide"><li class="hover hide">Розклад уроків</li></a>
+				<a href="" class="hide"><li class="hover hide">Фотогалерея</li></a>
+				<a href="contact.html" class="hide"><li class="hover hide">Контакти</li></a>
 				<li class="hide"><i class="fas fa-globe"></i><span class="lang active">UA</span><a href=""><span class="lang non-ac">EN</span></a></li>
 				<li id="menu"><a href="#" class="icon" id="showHideContent"><i class="fas fa-bars"></i></a></li>
 			</ul>
 		</nav>
 	</header>
-	<div class="row mb">
-		<div class="tacc">Львівська Лінгвістична Гімназія</div>
-		<div class="f-block">
-			<!-- <p>Адреса гімназії: <span class="tar">Україна, 79005, м. Львів вул. Кирила і Мефодія, 17а </span></p>
-			<p>Телефон гімназії: <span class="tar">(032) 260-04-16</span></p>
-			<p>Тел./факс: <span class="tar">260-04-18, 260-04-15</span></p>
-			<p>Е-mail:<span class="tar">lingua_gymn@ukr.net</span></p> -->
-			<table>
-				<tr class="bgc">
-					<td>Адреса гімназії:</td>
-					<td>Україна, 79005, м. Львів вул. Кирила і Мефодія, 17а</td>
-				</tr>
-				<tr>
-					<td>Телефон гімназії:</td>
-					<td>(032) 260-04-16</td>
-				</tr>
-				<tr class="bgc">
-					<td>Тел./факс: </td>
-					<td>260-04-18, 260-04-15</td>
-				</tr>
-				<tr>
-					<td>Е-mail:</td>
-					<td>lingua_gymn@ukr.net</td>
-				</tr>
-			</table>
-		</div>
-		<div class="s-block">
-			<img src="img/budova.jpg" alt="Будинок">
-		</div>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d643.3881889594024!2d24.030929129234043!3d49.832070598712185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add6648dd61cb%3A0x57629e95f44c3b80!2z0JvRltC90LPQstGW0YHRgtC40YfQvdCwINCz0ZbQvNC90LDQt9GW0Y8!5e0!3m2!1suk!2sua!4v1521893069939" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen class="contact"></iframe>
+	<div id="container-sch">
+		<span class="tac">Розклад уроків на 2017-2018 навчальний рік<br></span>
+		<div class="c-th"><a href="">
+				<div class="th">Паралель 1-х класів</div>
+			</a></div>
+		<div class="c-th"><a href="">
+				<div class="th">Паралель 2-х класів</div>
+			</a></div>
+		<div class="c-th"><a href="">
+				<div class="th">Паралель 3-х класів</div>
+			</a></div>
+		<div class="c-th"><a href="">
+				<div class="th">Паралель 4-х класів</div>
+			</a></div>
+		<div class="c-th"><a href="">
+				<div class="th">Паралель 5-х класів</div>
+			</a></div>
+		<div class="c-th"><a href="">
+				<div class="th">Паралель 6-х класів</div>
+			</a></div>
+		<div class="c-th"><a href="">
+				<div class="th">Паралель 7-х класів</div>
+			</a></div>
 	</div>
 	<footer>
 		<div class="inner-foot">
@@ -90,7 +83,7 @@
 				<p class="txt">Україна, 79005, м. Львів<br>вул. Кирила і Мефодія, 17а <br>(032) 260-04-16</p>
 			</div>
 			<div class="foot-bl f">
-				<p class="head">Про нас</p>
+				<p class="head">Додаткова інформація</p>
 				<p class="txt"><a href="сonditions.html">Умови вступу</a><br><a href="docs.html">Установчі Документи</a><br><a href="contact.html">Контакти</a></p>
 			</div>
 			<div class="foot-bl">
@@ -99,11 +92,11 @@
 			</div>
 		</div>
 		<div class="footer-copyright">
-            <div class="container">
-            © 2018 LLG. Made by
-            <a class="grey-text text-lighten-4 right" href="#!">Ivan Kagitin</a>
-            </div>
-          </div>
+			<div class="container">
+				© 2018 LLG. Made by
+				<a class="grey-text text-lighten-4 right" href="#!">Ivan Kagitin</a>
+			</div>
+		</div>
 	</footer>
 	<script src="script/script.js"></script>
 </body>
