--- a/schedule.html
+++ b/schedule.html
@@ -24,10 +24,10 @@
 		<a href="docs.html"><div class="line bb">
 			<p>Установчі документи</p>
 		</div></a>
-		<a href=""><div class="line bb">
+		<a href="schedule.html"><div class="line bb">
 			<p>Розклад уроків</p>
 		</div></a>
-		<a href=""><div class="line bb">
+		<a href="photo.html"><div class="line bb">
 			<p>Фотогалерея</p>
 		</div></a>
 		<a href="contact.html"><div class="line">
@@ -43,7 +43,7 @@
 				<a href="сonditions.html" class="hide"><li class="hover hide">Умови вступу</li></a>
 				<a href="docs.html" class="hide"><li class="hover hide">Установчі документи</li></a>
 				<a href="schedule.html" class="hide"><li class="hover hide">Розклад уроків</li></a>
-				<a href="" class="hide"><li class="hover hide">Фотогалерея</li></a>
+				<a href="photo.html" class="hide"><li class="hover hide">Фотогалерея</li></a>
 				<a href="contact.html" class="hide"><li class="hover hide">Контакти</li></a>
 				<li class="hide"><i class="fas fa-globe"></i><span class="lang active">UA</span><a href=""><span class="lang non-ac">EN</span></a></li>
 				<li id="menu"><a href="#" class="icon" id="showHideContent"><i class="fas fa-bars"></i></a></li>
