--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ЛЛГ</title>
+	<title>Львівська Лінгвістична Гімназія</title>
 	<link rel="stylesheet" href="fonts/font-awesome/css/fontawesome-all.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -21,9 +21,6 @@
 		<a href="сonditions.html"><div class="line">
 			<p>Умови вступу</p>
 		</div></a>
-		<a href="docs.html"><div class="line bb">
-			<p>Установчі документи</p>
-		</div></a>
 		<a href="schedule.html"><div class="line bb">
 			<p>Розклад уроків</p>
 		</div></a>
@@ -41,11 +38,9 @@
 				<li><img src="img/llglll2_50_1_20.png" alt="logo" class="logo show hiden"></li>
 				<a href="index.html"><li class="hover">Головна</li></a>
 				<a href="сonditions.html" class="hide"><li class="hover hide">Умови вступу</li></a>
-				<a href="docs.html" class="hide"><li class="hover hide">Установчі документи</li></a>
 				<a href="schedule.html" class="hide"><li class="hover hide">Розклад уроків</li></a>
 				<a href="photo.html" class="hide"><li class="hover hide">Фотогалерея</li></a>
 				<a href="contact.html" class="hide"><li class="hover hide">Контакти</li></a>
-				<li class="hide"><i class="fas fa-globe"></i><span class="lang active">UA</span><a href=""><span class="lang non-ac">EN</span></a></li>
 				<li id="menu"><a href="#" class="icon" id="showHideContent"><i class="fas fa-bars"></i></a></li>
 			</ul>
 		</nav>
@@ -103,7 +98,7 @@
 				</a>
 			</div>
 			<div class="half-block">
-				<p>Свято присвячене Дню народження Шевченка, 21.03.2018</p>
+				<p>Свято до Дню народження Шевченка</p>
 				<iframe width="100%" height="310" src="https://www.youtube.com/embed/ywqWzDPGWKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class="iframe"></iframe>
 			</div>
 			<div class="half-block">
@@ -140,8 +135,8 @@
 		</div>
 		<div class="footer-copyright">
             <div class="container">
-            © 2018 LLG. Made by
-            <a class="grey-text text-lighten-4 right" href="#!">Ivan Kagitin</a>
+            © 2018 LLG<!--  Made by
+            <a class="grey-text text-lighten-4 right" href="#!">Ivan Kagitin</a> -->
             </div>
           </div>
 	</footer>
