--- a/about.html
+++ b/about.html
@@ -21,9 +21,6 @@
 		<a href="сonditions.html"><div class="line">
 			<p>Умови вступу</p>
 		</div></a>
-		<a href="docs.html"><div class="line bb">
-			<p>Установчі документи</p>
-		</div></a>
 		<a href="schedule.html"><div class="line bb">
 			<p>Розклад уроків</p>
 		</div></a>
@@ -41,12 +38,11 @@
 				<li><img src="img/llglll2_50_1_20.png" alt="logo" class="logo show hiden"></li>
 				<a href="index.html"><li class="hover">Головна</li></a>
 				<a href="сonditions.html" class="hide"><li class="hover hide">Умови вступу</li></a>
-				<a href="docs.html" class="hide"><li class="hover hide">Установчі документи</li></a>
 				<a href="schedule.html" class="hide"><li class="hover hide">Розклад уроків</li></a>
 				<a href="photo.html" class="hide"><li class="hover hide">Фотогалерея</li></a>
 				<a href="contact.html" class="hide"><li class="hover hide">Контакти</li></a>
-				<li class="hide"><i class="fas fa-globe"></i><span class="lang active">UA</span><a href=""><span class="lang non-ac">EN</span></a></li>
-				<li id="menu"><a href="#" class="icon" id="showHideContent"><i class="fas fa-bars"></i></a></li>
+<!-- 				<li class="hide"><i class="fas fa-globe"></i><span class="lang active">UA</span><a href=""><span class="lang non-ac">EN</span></a></li>
+ -->				<li id="menu"><a href="#" class="icon" id="showHideContent"><i class="fas fa-bars"></i></a></li>
 			</ul>
 		</nav>
 	</header>
