--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 	</header>
 	<div class="row mb">
 		<div class="tacc">Львівська Лінгвістична Гімназія</div>
-		<div class="f-block">
+		<div class="f-block" style="margin-bottom: 40px;">
 			<!-- <p>Адреса гімназії: <span class="tar">Україна, 79005, м. Львів вул. Кирила і Мефодія, 17а </span></p>
 			<p>Телефон гімназії: <span class="tar">(032) 260-04-16</span></p>
 			<p>Тел./факс: <span class="tar">260-04-18, 260-04-15</span></p>
@@ -74,8 +74,9 @@
 		<div class="s-block">
 			<img src="img/budova.jpg" alt="Будинок">
 		</div>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d643.3881889594024!2d24.030929129234043!3d49.832070598712185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add6648dd61cb%3A0x57629e95f44c3b80!2z0JvRltC90LPQstGW0YHRgtC40YfQvdCwINCz0ZbQvNC90LDQt9GW0Y8!5e0!3m2!1suk!2sua!4v1521893069939" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen class="contact"></iframe>
-	</div>
+		<div id="map" class="contact"></div>
+<!-- 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d643.3881889594024!2d24.030929129234043!3d49.832070598712185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add6648dd61cb%3A0x57629e95f44c3b80!2z0JvRltC90LPQstGW0YHRgtC40YfQvdCwINCz0ZbQvNC90LDQt9GW0Y8!5e0!3m2!1suk!2sua!4v1521893069939" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen class="contact"></iframe>
+ -->	</div>
 	<footer>
 		<div class="inner-foot">
 			<div class="foot-bl">
@@ -101,5 +102,6 @@
           </div>
 	</footer>
 	<script src="script/script.js"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
 </body>
 </html>
