--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,6 @@
           </div>
 	</footer>
 	<script src="script/script.js"></script>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyColQP_9cACTti3ertiJMt3mJVlpmhtNSA&callback=initMap"></script>
 </body>
 </html>
