--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,6 @@
           </div>
 	</footer>
 	<script src="script/script.js"></script>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyColQP_9cACTti3ertiJMt3mJVlpmhtNSA&callback=initMap"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_qq44uOaujSUtZ9crrjn3-fCBmjwYESA&callback=initMap" type="text/javascript"></script>
 </body>
 </html>
