--- a/docs.html
+++ b/docs.html
@@ -70,8 +70,8 @@
 		</div>
 		<div class="footer-copyright">
             <div class="container">
-            © 2018 LLG <!-- Made by
-            <a class="grey-text text-lighten-4 right" href="#!">Ivan Kagitin</a> -->
+            © 2018 LLG | 
+            <a class="grey-text text-lighten-4 right" href="#">Ivan Kagitin</a> 
             </div>
           </div>
 	</footer>
