--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 			<!-- <img src="img/llglll2_50_1_20.png" alt="" class="photo"> -->
 			<span class="pro">Про нас</span>
 		</div>
-		<span class="ln2 m5"><b>Спочатку приватна гімназія СС Василіянок знаходилась в Академічному на вулиці Супінського, 21 (тепер це вул. Коцюбинського).Стара споруда гімназії не збереглася. Відомо, що гімназія була</b><br></span>
-		<span class="ln2">Навчалися в гімназії 8 років. З першого гімназійного класу починалось вивчення таких дисциплін: релігії, української, польської та німецької мов, історії України і всесвітньої історії, географії, математики, природознавства, а також рисунку і каліграфії. У старших класах більшу увагу звертали <br><br></span>
+		<span class="ln2 m5"><b>Львівська лінгвістична гімназія — гімназія міста Львова, з поглибленим вивченням іноземних мов. Це була перша дівоча гімназія у Галичині, створена 4 вересня 1906 року за дорученням митрополита УГКЦ Андрея Шептицького. Будівля знаходиться на вулиці Кирила і Мефодія, 17а.</b><br></span>
+		<span class="ln2">Навчалися в гімназії 8 років. З першого гімназійного класу починалось вивчення таких дисциплін: релігії, української, польської та німецької мов, історії України і всесвітньої історії, географії, математики, природознавства, а також рисунку і каліграфії.<br><br></span>
 		<a href="about.html"><span class="more">Дізнатися більше</span></a>
 	</div>
 	<footer>
@@ -135,8 +135,8 @@
 		</div>
 		<div class="footer-copyright">
             <div class="container">
-            © 2018 LLG<!--  Made by
-            <a class="grey-text text-lighten-4 right" href="#!">Ivan Kagitin</a> -->
+            © 2018 LLG | 
+            <a class="grey-text text-lighten-4 right" href="#">Ivan Kagitin</a> 
             </div>
           </div>
 	</footer>
