--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 		<div class="footer-copyright">
             <div class="container">
             © 2018 LLG | 
-            <a class="grey-text text-lighten-4 right" href="#">Ivan Kagitin</a> 
+            <a class="grey-text text-lighten-4 right" href="http://kahitin.space/">Ivan Kagitin</a> 
             </div>
           </div>
 	</footer>
