High resolution problems

--- a/photo.html
+++ b/photo.html
@@ -45,6 +45,7 @@
 			</ul>
 		</nav>
 	</header>
+	<div id="father">
 	<div id="container">
 		<span class="pro">Фотогалерея</span>
 		<div id="events">
@@ -104,11 +105,12 @@
 		</div>
 		<div class="footer-copyright">
             <div class="container">
-            © 2018 LLG | 
-            <a class="grey-text text-lighten-4 right" href="http://kahitin.space/">Ivan Kagitin</a> 
+            © 2018 LLG <!-- Made by
+            <a class="grey-text text-lighten-4 right" href="#!">Ivan Kagitin</a> -->
             </div>
           </div>
 	</footer>
+</div>
 	<script src="script/script.js"></script>
 </body>
 </html>
