--- a/schedule.html
+++ b/schedule.html
@@ -88,11 +88,12 @@
 		</div>
 		<div class="footer-copyright">
 			<div class="container">
-            © 2018 LLG | 
-            <a class="grey-text text-lighten-4 right" href="http://kahitin.space/">Ivan Kagitin</a> 
-            </div>
+				© 2018 LLG <!-- Made by
+				<a class="grey-text text-lighten-4 right" href="#!">Ivan Kagitin</a> -->
+			</div>
 		</div>
 	</footer>
+</div>
 	<script src="script/script.js"></script>
 </body>
 </html>
