--- a/schedule.html
+++ b/schedule.html
@@ -45,6 +45,7 @@
 			</ul>
 		</nav>
 	</header>
+	<div id="father">
 	<div id="container-sch">
 		<span class="tac">Розклад уроків на 2017-2018 навчальний рік<br></span>
 		<div class="c-th"><a href="">
