--- a/schedule.html
+++ b/schedule.html
@@ -46,55 +46,55 @@
 		</nav>
 	</header>
 	<div id="father">
-	<div id="container-sch">
-		<span class="tac">Розклад уроків на 2017-2018 навчальний рік<br></span>
-		<div class="c-th"><a href="">
+		<div id="container-sch">
+			<span class="tac">Розклад уроків на 2017-2018 навчальний рік<br></span>
+			<div class="c-th"><a href="">
 				<div class="th">Паралель 1-х класів</div>
 			</a></div>
-		<div class="c-th"><a href="">
+			<div class="c-th"><a href="">
 				<div class="th">Паралель 2-х класів</div>
 			</a></div>
-		<div class="c-th"><a href="">
+			<div class="c-th"><a href="">
 				<div class="th">Паралель 3-х класів</div>
 			</a></div>
-		<div class="c-th"><a href="">
+			<div class="c-th"><a href="">
 				<div class="th">Паралель 4-х класів</div>
 			</a></div>
-		<div class="c-th"><a href="">
+			<div class="c-th"><a href="">
 				<div class="th">Паралель 5-х класів</div>
 			</a></div>
-		<div class="c-th"><a href="">
+			<div class="c-th"><a href="">
 				<div class="th">Паралель 6-х класів</div>
 			</a></div>
-		<div class="c-th"><a href="">
+			<div class="c-th"><a href="">
 				<div class="th">Паралель 7-х класів</div>
 			</a></div>
+		</div>
+		<footer>
+			<div class="inner-foot">
+				<div class="foot-bl">
+					<img src="img/new2.png" alt="">
+				</div>
+				<div class="foot-bl">
+					<p class="txt">Україна, 79005, м. Львів<br>вул. Кирила і Мефодія, 17а <br>(032) 260-04-16</p>
+				</div>
+				<div class="foot-bl f">
+					<p class="head">Додаткова інформація</p>
+					<p class="txt"><a href="сonditions.html">Умови вступу</a><br><a href="docs.html">Установчі Документи</a><br><a href="contact.html">Контакти</a></p>
+				</div>
+				<div class="foot-bl">
+					<p class="head">Гімназія</p>
+					<p class="txt"><a href="">Розклад уроків</a><br><a href="">Психологічна служба</a><br><a href="">Виховна робота</a></p>
+				</div>
+			</div>
+			<div class="footer-copyright">
+				<div class="container">
+					© 2018 LLG | 
+					<a class="grey-text text-lighten-4 right" href="http://kahitin.space/">Ivan Kagitin</a> 
+				</div>
+			</div>
+		</footer>
 	</div>
-	<footer>
-		<div class="inner-foot">
-			<div class="foot-bl">
-				<img src="img/new2.png" alt="">
-			</div>
-			<div class="foot-bl">
-				<p class="txt">Україна, 79005, м. Львів<br>вул. Кирила і Мефодія, 17а <br>(032) 260-04-16</p>
-			</div>
-			<div class="foot-bl f">
-				<p class="head">Додаткова інформація</p>
-				<p class="txt"><a href="сonditions.html">Умови вступу</a><br><a href="docs.html">Установчі Документи</a><br><a href="contact.html">Контакти</a></p>
-			</div>
-			<div class="foot-bl">
-				<p class="head">Гімназія</p>
-				<p class="txt"><a href="">Розклад уроків</a><br><a href="">Психологічна служба</a><br><a href="">Виховна робота</a></p>
-			</div>
-		</div>
-		<div class="footer-copyright">
-			<div class="container">
-				© 2018 LLG <!-- Made by
-				<a class="grey-text text-lighten-4 right" href="#!">Ivan Kagitin</a> -->
-			</div>
-		</div>
-	</footer>
-</div>
 	<script src="script/script.js"></script>
 </body>
 </html>
