--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
 					</div>
 				</a>
 			</div>
-			<div class="half-block">
+			<!--<div class="half-block">
 				<p>Свято присвячене Дню народження Шевченка, 21.03.2018 року</p>
 				<iframe width="100%" height="310" src="https://www.youtube.com/embed/ywqWzDPGWKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
 			<div class="half-block">
 				<p>Олена Теліга</p>
 				<iframe width="100%" height="310" src="https://www.youtube.com/embed/zEZ_5Bx87mk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			</div>
+			</div>-->
 		</div>
 	</div>
 	<div id="about">
