--- a/contact.html
+++ b/contact.html
@@ -98,6 +98,16 @@
             <div class="container">
             © 2018 LLG | 
             <a class="grey-text text-lighten-4 right" href="http://kahitin.space/">Ivan Kagitin</a> 
+		    <!--LiveInternet counter--><a href="//www.liveinternet.ru/click"
+	target="_blank"><img id="licntC458" width="88" height="31" style="border:0" 
+	title="LiveInternet: number of pageviews and visitors for 24 hours is shown"
+	src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7"
+	alt=""/></a><script>(function(d,s){d.getElementById("licntC458").src=
+	"//counter.yadro.ru/hit?t52.6;r"+escape(d.referrer)+
+	((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+
+	(s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
+	";h"+escape(d.title.substring(0,150))+";"+Math.random()})
+	(document,screen)</script><!--/LiveInternet-->
             </div>
           </div>
 	</footer>
