--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-181015439-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-181015439-1');
+</script>
+
 </head>
 <body>
 	<div id="navmenu">
@@ -133,16 +143,6 @@
             <div class="container">
             © 2018 LLG | 
             <a class="grey-text text-lighten-4 right" href="http://kahitin.space/">Ivan Kagitin</a> 
-		<!--LiveInternet counter--><a href="//www.liveinternet.ru/click"
-	target="_blank"><img id="licntC458" width="88" height="31" style="border:0" 
-	title="LiveInternet: number of pageviews and visitors for 24 hours is shown"
-	src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7"
-	alt=""/></a><script>(function(d,s){d.getElementById("licntC458").src=
-	"//counter.yadro.ru/hit?t52.6;r"+escape(d.referrer)+
-	((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+
-	(s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
-	";h"+escape(d.title.substring(0,150))+";"+Math.random()})
-	(document,screen)</script><!--/LiveInternet-->
             </div>
           </div>
 	</footer>
